--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-qtwayland-opensource-src (5.10.1-4) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
 
   [ Simon Quigley ]
   * Add my name to Uploaders.
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Add debian/.gitattributes to use dpkg-mergechangelgs at merge time.
+  * New upstream release.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
 
