--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
   * Add debian/.gitattributes to use dpkg-mergechangelgs at merge time.
   * New upstream release.
     - Bump Qt build dependencies.
+  * Mark qtwayland5-doc[-html] as Multi-Arch: foreign as noted by the
+    multiarch hinter.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
 
