--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
     multiarch hinter.
   * Update symbols files with current build log.
   * Bump Standards-Version to 4.1.4, no changes required.
+  * Bump dh compat to 11.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
 
