--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
   * Update symbols files with current build log.
   * Bump Standards-Version to 4.1.4, no changes required.
   * Bump dh compat to 11.
+    - Require debhelper >= 11~.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
 
