--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.11.1-1) experimental; urgency=medium
 
   [ Simon Quigley ]
   * Add my name to Uploaders.
@@ -14,7 +14,7 @@ qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
   * Bump dh compat to 11.
     - Require debhelper >= 11~.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 29 Jun 2018 13:43:56 -0300
 
 qtwayland-opensource-src (5.10.1-3) unstable; urgency=medium
 
