--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtwayland-opensource-src (5.11.2-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 03 Oct 2018 12:30:26 +0300
+
 qtwayland-opensource-src (5.11.1-2) unstable; urgency=medium
 
   * Upload to Sid.
