--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwayland-opensource-src (5.11.2-0neon) UNRELEASED; urgency=medium
+
+  * new version
+
+ -- Jonathan Riddell <jr@jriddell.org>  Thu, 20 Sep 2018 16:23:45 +0100
+
 qtwayland-opensource-src (5.11.1-2) unstable; urgency=medium
 
   * Upload to Sid.
