--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwayland-opensource-src (5.11.2-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 16 Oct 2018 18:58:33 +0300
+
 qtwayland-opensource-src (5.11.2-1) experimental; urgency=medium
 
   * New upstream release.
