--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwayland-opensource-src (5.11.2-3) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 17 Oct 2018 19:50:05 +0300
+
 qtwayland-opensource-src (5.11.2-2) unstable; urgency=medium
 
   * Upload to unstable.
