--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtwayland-opensource-src (5.11.2-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Make tests non-fatal on mips/mipsel, because of failures.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 17 Oct 2018 19:50:05 +0300
 
