--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-qtwayland-opensource-src (5.11.2-4) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.11.3-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Make libqt5waylandclient5-dev and libqt5waylandcompositor5-dev depend
     on qtwayland5. These packages ship CMake files which reference plugin
     files from that package (LP: #1806186).
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 01 Dec 2018 17:43:40 +0300
 
